Fix overflow hidden issue on site

--- a/client/styles/_site.scss
+++ b/client/styles/_site.scss
@@ -17,12 +17,11 @@ $site_margin: 6%;
     padding-bottom: 2em;
     text-align: center;
 
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     width: 90%;
     height: 100%;
-    overflow: hidden;
     z-index: 1;
 
     @include box-sizing(border-box);
@@ -45,6 +44,7 @@ $site_margin: 6%;
     &.active {
         z-index: 2;
         height: inherit;
+        position: absolute;
         @include site_position(-$site_margin);
 
         &:after {
