--- a/public/css/jRadio.css
+++ b/public/css/jRadio.css
@@ -536,12 +536,11 @@ th {
 .site {
   padding-bottom: 2em;
   text-align: center;
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   width: 90%;
   height: 100%;
-  overflow: hidden;
   z-index: 1;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -564,7 +563,7 @@ th {
   -o-transform: translate3d(0, 10em, 0);
   transform: translate3d(0, 10em, 0);
 }
-/* line 33, ../client/styles/_site.scss */
+/* line 32, ../client/styles/_site.scss */
 .site:after {
   content: '';
   position: fixed;
@@ -578,10 +577,11 @@ th {
   -o-transition: opacity 0.3s;
   transition: opacity 0.3s;
 }
-/* line 45, ../client/styles/_site.scss */
+/* line 44, ../client/styles/_site.scss */
 .site.active {
   z-index: 2;
   height: inherit;
+  position: absolute;
   -webkit-transform: translate3d(-6%, 0, 0);
   -moz-transform: translate3d(-6%, 0, 0);
   -ms-transform: translate3d(-6%, 0, 0);
